# Collatz

./: README.md  __init__.py  cli.py  collatz_state.sh  hero_widget.js  init.menu.sh  init.persistence.sh  pyproject.toml  sequence.py
standalone_collatz/: .gitignore  CollatzExplorer.spec  README.md  collatz_stats_server.py  init.collatz.sh  init.sh  pyproject.toml
standalone_collatz/scripts/: build_executable.py  build_unix.sh  build_windows.ps1
standalone_collatz/src/collatz_standalone/: __init__.py  __main__.py  cli.py  core.py  gui.py
