[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz"
version = "0.1.0"
description = "Utilities for exploring the Collatz conjecture"
authors = [{name = "plantr100"}]
readme = "collatz/README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
